headless mode for browsers and dependencies update

--- a/Automation with BaseClass/Automation/test-output/extent/Index.html
+++ b/Automation with BaseClass/Automation/test-output/extent/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Regression Testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 8, 2024 07:39:46 AM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 12, 2024 11:13:20 AM</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Smoke</a><a class="dropdown-item" href="#">Regression</a>
+<a class="dropdown-item" href="#">Regression</a><a class="dropdown-item" href="#">Smoke</a>
 </ul>
 </li>
 </ul>
@@ -105,7 +105,7 @@
           <div class="test-detail">
             <p class="name">FillForm</p>
             <p class="text-sm">
-              <span>7:39:53 AM</span> / <span>00:00:00:000</span>
+              <span>11:13:40 AM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -114,8 +114,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">FillForm</h5>
-<span class='badge badge-success'>02.08.2024 7:39:53 AM</span>
-<span class='badge badge-danger'>02.08.2024 7:39:53 AM</span>
+<span class='badge badge-success'>02.12.2024 11:13:40 AM</span>
+<span class='badge badge-danger'>02.12.2024 11:13:40 AM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -132,7 +132,7 @@
           <div class="test-detail">
             <p class="name">Fill form test</p>
             <p class="text-sm">
-              <span>7:39:53 AM</span> / <span>00:00:05:320</span>
+              <span>11:13:40 AM</span> / <span>00:00:06:803</span>
               <span class="badge warning-bg log float-right">Warning</span>
             </p>
           </div>
@@ -141,9 +141,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-warning">Fill form test</h5>
-<span class='badge badge-success'>02.08.2024 7:39:53 AM</span>
-<span class='badge badge-danger'>02.08.2024 7:39:59 AM</span>
-<span class='badge badge-default'>00:00:05:320</span>
+<span class='badge badge-success'>02.12.2024 11:13:40 AM</span>
+<span class='badge badge-danger'>02.12.2024 11:13:47 AM</span>
+<span class='badge badge-default'>00:00:06:803</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -160,28 +160,28 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>7:39:59 AM</td>
+        <td>11:13:47 AM</td>
         <td>
           Step1 : Filling the form
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:39:59 AM</td>
+        <td>11:13:47 AM</td>
         <td>
           Form Filled
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log warning-bg">Warning</span></td>
-        <td>7:39:59 AM</td>
+        <td>11:13:47 AM</td>
         <td>
           warning
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>7:39:59 AM</td>
+        <td>11:13:47 AM</td>
         <td>
           Test Pass successfully
         </td>
@@ -198,7 +198,7 @@
           <div class="test-detail">
             <p class="name">myTest</p>
             <p class="text-sm">
-              <span>7:40:15 AM</span> / <span>00:00:07:007</span>
+              <span>11:14:08 AM</span> / <span>00:00:07:664</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -207,9 +207,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">myTest</h5>
-<span class='badge badge-success'>02.08.2024 7:40:15 AM</span>
-<span class='badge badge-danger'>02.08.2024 7:40:22 AM</span>
-<span class='badge badge-default'>00:00:07:007</span>
+<span class='badge badge-success'>02.12.2024 11:14:08 AM</span>
+<span class='badge badge-danger'>02.12.2024 11:14:16 AM</span>
+<span class='badge badge-default'>00:00:07:664</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -222,7 +222,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>7:40:22 AM</td>
+        <td>11:14:16 AM</td>
         <td>
           Details of Failure
     <div class="row mb-3"><div class="col-md-3">
@@ -243,7 +243,7 @@
           <div class="test-detail">
             <p class="name">myTest</p>
             <p class="text-sm">
-              <span>7:40:26 AM</span> / <span>00:00:02:015</span>
+              <span>11:14:25 AM</span> / <span>00:00:13:084</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -252,9 +252,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">myTest</h5>
-<span class='badge badge-success'>02.08.2024 7:40:26 AM</span>
-<span class='badge badge-danger'>02.08.2024 7:40:28 AM</span>
-<span class='badge badge-default'>00:00:02:015</span>
+<span class='badge badge-success'>02.12.2024 11:14:25 AM</span>
+<span class='badge badge-danger'>02.12.2024 11:14:38 AM</span>
+<span class='badge badge-default'>00:00:13:084</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -267,7 +267,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>7:40:28 AM</td>
+        <td>11:14:38 AM</td>
         <td>
           Details of Failure
     <div class="row mb-3"><div class="col-md-3">
@@ -303,39 +303,6 @@
 <span class="meta">
 <span class='badge log badge-warning'>1</span>
 </span>
-<p class="name">Smoke</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>Smoke</h4>
-<span status="skip" class='badge log badge-warning'>1 others</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="warning">
-<td><span class="badge log warning-bg">Warning</span></td>
-<td>07:39:53 AM</td>
-<td>
-<a href="#" class="linked" test-id='2' id='2'>Fill form test</a>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-warning'>1</span>
-</span>
 <p class="name">Regression</p>
 <p class="duration text-sm">1 tests</p>
 </div>
@@ -355,7 +322,40 @@
 <tbody>
 <tr class="tag-test-status" status="warning">
 <td><span class="badge log warning-bg">Warning</span></td>
-<td>07:39:53 AM</td>
+<td>11:13:40 AM</td>
+<td>
+<a href="#" class="linked" test-id='2' id='2'>Fill form test</a>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log badge-warning'>1</span>
+</span>
+<p class="name">Smoke</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>Smoke</h4>
+<span status="skip" class='badge log badge-warning'>1 others</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="warning">
+<td><span class="badge log warning-bg">Warning</span></td>
+<td>11:13:40 AM</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>Fill form test</a>
 </td>
@@ -404,7 +404,7 @@
 <tbody>
 <tr class="tag-test-status" status="warning">
 <td><span class="badge log warning-bg">Warning</span></td>
-<td>07:39:53 AM</td>
+<td>11:13:40 AM</td>
 <td>
 <a href="#" class="linked" test-id='2' id='2'>Fill form test</a>
 </td>
@@ -426,13 +426,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 8, 2024 07:39:46 AM</h3>
+<h3>Feb 12, 2024 11:13:20 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 8, 2024 07:40:28 AM</h3>
+<h3>Feb 12, 2024 11:14:38 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -502,7 +502,7 @@
 </div></div>
 <script>
 var timeline = {
-"FillForm":0,"Fill form test":5.32,"myTest":7.007,"myTest":2.015
+"FillForm":0,"Fill form test":6.803,"myTest":7.664,"myTest":13.084
 };
 </script>
 <div class="row">
@@ -530,7 +530,7 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>Smoke</td>
+<td>Regression</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
@@ -538,7 +538,7 @@ var timeline = {
 <td>0%</td>
 </tr>
 <tr>
-<td>Regression</td>
+<td>Smoke</td>
 <td>0</td>
 <td>0</td>
 <td>0</td>
